Multiple scrollbar fix

--- a/web-components/src/components/combobox/scss/combobox.scss
+++ b/web-components/src/components/combobox/scss/combobox.scss
@@ -162,6 +162,10 @@ ul {
   }
 }
 
+ul:has( > .virtual-scroll) {
+  overflow: hidden;
+}
+
 .md-combobox-multi-input {
   width: initial;
 }
